# uma_productivity_collaboration_tool

./: .gitignore  Cargo.toml  README.md  code_archive.rs  code_archive.txt  coordinated_decisions.txt  multi-person-e.g.-node.toml  ok_code_archive.txt  project_areas.txt  samples.txt  sys_def_studies.txt  t_is_for_task.md  t_is_for_task.txt  tom
ababproject_graph_data/collaborator_files_address_book/: alice__collaborator.toml  bob__collaborator.toml
ababproject_graph_data/session_state_items/: current_node_directory_path.txt
ababproject_graph_data/team_channels/teamtest/: node (Copy).toml  node.toml
docs/: T_is_for_Taskv36.txt  sync_network_overview.md
import_export_invites/addressbook_invite/export/: key.asc
invites_updates/outgoing/: key.asc
project_graph_data (Copy 3)/collaborator_files_address_book/: alice__collaborator.toml
project_graph_data (Copy 3)/team_channels/tofu/: node.toml
project_graph_data (Copy)/session_state_items/: current_node_directory_path.txt
src/: buffy_format_write_module.rs  clearsign_toml_module.rs  handle_gpg.rs  main (Casasgsopy).rs  main (maybe signal sent v1).rs  main refactpromg poagpsm (Copy).rs  main.rs  manage_absolute_executable_directory_relative_paths.rs  padnet_otp_module.rs  read_toml_field.rs  samples.rs  source_it_module.rs
src (bkup)/: main.rs
src (bkup)/tiny_tui_module/: mod.rs
src/archive/: 2maasgasgsasin.rs  main (Codebug format updatepy).rs  main (Cofixing quit py).rs  main (Copy 3)closertosync20240927.rs  main (Copy) run with wait for sync presintk.rs  main (Copy) turn on sycn ok.rs  main (Copy)oihsgis.rs  main (Copy)runs closer to synxc 2024 09 28.rs  main (Copy)runs pre ip.rs  main (Cosdhsdhsdhpy).rs  main 2024 09 26.rs  main exit ok pre sync (Cogsgsgsgspy).rs
src/tiny_tui_module/: mod.rs
(+21 files in other folders)
